# Copyright 2025 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Resources for Brahmic scripts.
   Input format is ISO strings following the specifications of nisaba/scripts/brahmic:iso"""

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit:__subpackages__",
    ],
)

licenses(["notice"])

py_library(
    name = "acronym",
    srcs = ["acronym.py"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:grapheme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "derom_inventory",
    srcs = ["derom_inventory.py"],
    deps = [
        ":grapheme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:inventory",
        "//nisaba/scripts/natural_translit/utils:log_op",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "derom_inventory_test",
    srcs = ["derom_inventory_test.py"],
    main = "derom_inventory_test.py",
    deps = [
        ":derom_inventory",
        ":grapheme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/utils:test_op",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "deromanizer",
    srcs = ["deromanizer.py"],
    deps = [
        ":derom_inventory",
        ":grapheme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/script:char",
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:inventory",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "deromanizer_test",
    srcs = ["deromanizer_test.py"],
    main = "deromanizer_test.py",
    deps = [
        ":derom_inventory",
        ":deromanizer",
        "//nisaba/scripts/natural_translit/language_params:ta",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "en_spellout",
    srcs = ["en_spellout.py"],
    deps = [
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:inventory",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "en_spellout_test",
    srcs = ["en_spellout_test.py"],
    main = "en_spellout_test.py",
    deps = [
        ":en_spellout",
        "//nisaba/scripts/natural_translit/utils:test_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "g2p",
    srcs = ["g2p.py"],
    deps = [
        ":grapheme_inventory",
        ":phoneme_inventory",
        "//nisaba/scripts/natural_translit/phonology/operations:syllable",
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:concat",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "g2p_test",
    srcs = ["g2p_test.py"],
    main = "g2p_test.py",
    deps = [
        ":g2p",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "grapheme_inventory",
    srcs = ["grapheme_inventory.py"],
    deps = [
        ":phoneme_inventory",
        "//nisaba/scripts/natural_translit/script:char",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "grapheme_inventory_test",
    srcs = ["grapheme_inventory_test.py"],
    main = "grapheme_inventory_test.py",
    deps = [
        ":grapheme_inventory",
        "//nisaba/scripts/natural_translit/utils:test_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "phoneme_inventory",
    srcs = ["phoneme_inventory.py"],
    deps = [
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/phonology:feature",
        "//nisaba/scripts/natural_translit/phonology:phon",
        "//nisaba/scripts/natural_translit/phonology:phoneme_inventory",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "romanizer",
    srcs = ["romanizer.py"],
    deps = [
        ":grapheme_inventory",
        ":phoneme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/phonology:phon",
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "romanizer_test",
    srcs = ["romanizer_test.py"],
    main = "romanizer_test.py",
    deps = [
        ":romanizer",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)
