# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Deromanization grms.

load(
    "//nisaba/scripts/utils:grammars.bzl",
    "nisaba_compile_multi_grm_py",
    "nisaba_grm_textproto_test",
)

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit:__subpackages__",
    ],
)

licenses(["notice"])

LANGUAGES = [
    ("hi", "deva"),
    ("ta", "taml"),
]

# Compile ISO grms. Eg: //nisaba/scripts/natural_translit/deromanization:hi_iso

[
    nisaba_compile_multi_grm_py(
        name = "%s_iso" % language,
        outs = {
            "byte": "%s_iso.far" % language,
            "utf8": "%s_iso_utf8.far" % language,
        },
        visibility = ["//visibility:public"],
        deps = [
            "@org_opengrm_pynini//pynini",
            "//nisaba/scripts/natural_translit/language_params:%s" % language,
        ],
    )
    for language, _ in LANGUAGES
]

# Compile Brahmic grms. Eg: //nisaba/scripts/natural_translit/deromanization:hi_deva

[
    nisaba_compile_multi_grm_py(
        name = "%s_%s" % (language, script),
        outs = {
            "byte": "%s_%s.far" % (language, script),
            "utf8": "%s_%s_utf8.far" % (language, script),
        },
        visibility = ["//visibility:public"],
        deps = [
            "@org_opengrm_pynini//pynini",
            "//nisaba/scripts/natural_translit/language_params:%s" % language,
        ],
    )
    for language, script in LANGUAGES
]

# ISO byte tests.
[
    nisaba_grm_textproto_test(
        name = "%s_iso_test" % language,
    )
    for language, _ in LANGUAGES
]

# ISO UTF-8 tests.
[
    nisaba_grm_textproto_test(
        name = "%s_iso_utf8_test" % language,
        textproto = "testdata/%s_iso.textproto" % language,
        token_type = "utf8",
    )
    for language, _ in LANGUAGES
]

# Brahmic only tests.
[
    nisaba_grm_textproto_test(
        name = "%s_%s_test" % (language, script),
    )
    for language, script in LANGUAGES
]

# Brahmic only UTF-8 tests.
[
    nisaba_grm_textproto_test(
        name = "%s_%s_utf8_test" % (language, script),
        textproto = "testdata/%s_%s.textproto" % (language, script),
        token_type = "utf8",
    )
    for language, script in LANGUAGES
]
