# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "//nisaba/scripts/utils:grammars.bzl",
    "nisaba_compile_multi_grm_py",
    "nisaba_grm_textproto_test",
)

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit/languages:__subpackages__",
    ],
)

licenses(["notice"])

nisaba_compile_multi_grm_py(
    name = "hi_iso_ipa",
    outs = {
        "byte": "hi_iso_ipa.far",
        "utf8": "hi_iso_ipa_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/language_params:hi",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_compile_multi_grm_py(
    name = "kn_iso_ipa",
    outs = {
        "byte": "kn_iso_ipa.far",
        "utf8": "kn_iso_ipa_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/language_params:kn",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_compile_multi_grm_py(
    name = "ml_iso_ipa",
    outs = {
        "byte": "ml_iso_ipa.far",
        "utf8": "ml_iso_ipa_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/language_params:ml",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_compile_multi_grm_py(
    name = "ta_iso_ipa",
    outs = {
        "byte": "ta_iso_ipa.far",
        "utf8": "ta_iso_ipa_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/language_params:ta",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_compile_multi_grm_py(
    name = "te_iso_ipa",
    outs = {
        "byte": "te_iso_ipa.far",
        "utf8": "te_iso_ipa_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/language_params:te",
        "@org_opengrm_pynini//pynini",
    ],
)

LANGUAGES = [
    "hi",
    "kn",
    "ml",
    "ta",
    "te",
]

# Ordinary byte tests.
[
    nisaba_grm_textproto_test(
        name = "%s_iso_ipa_test" % language,
    )
    for language in LANGUAGES
]

# UTF-8 tests.
[
    nisaba_grm_textproto_test(
        name = "%s_iso_ipa_utf8_test" % language,
        textproto = "testdata/%s_iso_ipa.textproto" % language,
        token_type = "utf8",
    )
    for language in LANGUAGES
]
