# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Language parameters grammars."""

load("@rules_python//python:py_library.bzl", "py_library")

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit:__subpackages__",
    ],
)

licenses(["notice"])

py_library(
    name = "hi",
    srcs = ["hi.py"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:derom_inventory",
        "//nisaba/scripts/natural_translit/brahmic:deromanizer",
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/brahmic:psa_phoneme_inventory",
        "//nisaba/scripts/natural_translit/brahmic/acronym:typ2acr",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "//nisaba/scripts/natural_translit/utils:concat",
        "//nisaba/scripts/natural_translit/utils:fst_list",
    ],
)

py_library(
    name = "kn",
    srcs = ["kn.py"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "//nisaba/scripts/natural_translit/utils:fst_list",
    ],
)

py_library(
    name = "ml",
    srcs = ["ml.py"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/brahmic:psa_phoneme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "//nisaba/scripts/natural_translit/phonology/operations:voicing",
        "//nisaba/scripts/natural_translit/utils:concat",
        "//nisaba/scripts/natural_translit/utils:fst_list",
    ],
)

py_library(
    name = "ta",
    srcs = ["ta.py"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:derom_inventory",
        "//nisaba/scripts/natural_translit/brahmic:deromanizer",
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/brahmic:psa_phoneme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "//nisaba/scripts/natural_translit/phonology/operations:voicing",
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:fst_list",
    ],
)

py_library(
    name = "te",
    srcs = ["te.py"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "//nisaba/scripts/natural_translit/utils:fst_list",
    ],
)
