# Copyright 2022 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "//nisaba/scripts/utils:grammars.bzl",
    "nisaba_compile_multi_grm_py",
    "nisaba_grm_textproto_test",
)

package(default_visibility = [
    "//nisaba/scripts/natural_translit/languages:__subpackages__",
])

licenses(["notice"])

nisaba_compile_multi_grm_py(
    name = "hi_e2e",
    outs = {
        "byte": "hi_e2e.far",
        "utf8": "hi_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/brahmic/acronym:typ2acr",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/phonology:phoneme_inventory",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "//nisaba/scripts/natural_translit/phonology:txn2ltn",
        "//nisaba/scripts/natural_translit/utils:concat",
        "//nisaba/scripts/natural_translit/utils:list_op",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_compile_multi_grm_py(
    name = "kn_e2e",
    outs = {
        "byte": "kn_e2e.far",
        "utf8": "kn_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_compile_multi_grm_py(
    name = "ml_e2e",
    outs = {
        "byte": "ml_e2e.far",
        "utf8": "ml_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/phonology:phoneme_inventory",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "//nisaba/scripts/natural_translit/phonology/operations:voicing",
        "//nisaba/scripts/natural_translit/utils:concat",
        "//nisaba/scripts/natural_translit/utils:list_op",
        "@org_opengrm_pynini//pynini",
    ],
)

nisaba_compile_multi_grm_py(
    name = "te_e2e",
    outs = {
        "byte": "te_e2e.far",
        "utf8": "te_e2e_utf8.far",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//nisaba/scripts/natural_translit/brahmic:iso2ltn_ops",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn",
        "//nisaba/scripts/natural_translit/brahmic:iso2txn_ops",
        "//nisaba/scripts/natural_translit/phonology:txn2ipa",
        "@org_opengrm_pynini//pynini",
    ],
)

LANGUAGES = [
    "hi",
    "kn",
    "ml",
    "te",
]

# Ordinary byte tests.
[
    nisaba_grm_textproto_test(
        name = "%s_e2e_test" % language,
    )
    for language in LANGUAGES
]

# UTF-8 tests.
[
    nisaba_grm_textproto_test(
        name = "%s_e2e_utf8_test" % language,
        textproto = "testdata/%s_e2e.textproto" % language,
        token_type = "utf8",
    )
    for language in LANGUAGES
]
