# Copyright 2023 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:py_library.bzl", "py_library")

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit:__subpackages__",
    ],
)

licenses(["notice"])

py_library(
    name = "ltn_inventory",
    srcs = ["ltn_inventory.py"],
    deps = [
        "//nisaba/scripts/natural_translit/script:char",
        "//nisaba/scripts/natural_translit/utils:list_op",
        "@org_opengrm_pynini//pynini",
    ],
)
