# Copyright 2022 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Phonology resources."""

package(default_visibility = [
    "//nisaba/scripts/natural_translit:__subpackages__",
])

licenses(["notice"])

py_library(
    name = "phoneme_inventory",
    srcs = ["phoneme_inventory.py"],
    deps = [
        "//nisaba/scripts/natural_translit/common:util",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "txn2ipa",
    srcs = ["txn2ipa.py"],
    deps = [
        ":phoneme_inventory",
        "//nisaba/scripts/natural_translit/common:rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "txn2ipa_test_py",
    srcs = ["txn2ipa_test.py"],
    main = "txn2ipa_test.py",
    deps = [
        ":txn2ipa",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "txn2ltn",
    srcs = ["txn2ltn.py"],
    deps = [
        ":phoneme_inventory",
        "//nisaba/scripts/natural_translit/common:rewrite_functions",
        "//nisaba/scripts/natural_translit/common:util",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "@org_opengrm_pynini//pynini",
    ],
)
