# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Phonology resources."""

package(
    default_visibility = ["//visibility:public"],
)

py_library(
    name = "feature",
    srcs = ["feature.py"],
    deps = [
        "//nisaba/scripts/natural_translit/utils:inventory",
        "//nisaba/scripts/natural_translit/utils:type_op",
    ],
)

py_library(
    name = "modify_phon",
    srcs = ["modify_phon.py"],
    deps = [
        ":feature",
        ":phon",
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "phon",
    srcs = ["phon.py"],
    deps = [
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:inventory",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "phoneme_inventory",
    srcs = ["phoneme_inventory.py"],
    deps = [
        ":feature",
        ":modify_phon",
        ":phon",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
    ],
)

py_library(
    name = "romanizer",
    srcs = ["romanizer.py"],
    deps = [
        ":phon",
        ":phoneme_inventory",
        "//nisaba/scripts/natural_translit/latin:ltn_inventory",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
    ],
)

py_test(
    name = "romanizer_test",
    srcs = ["romanizer_test.py"],
    main = "romanizer_test.py",
    deps = [
        ":romanizer",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "transcriptor",
    srcs = ["transcriptor.py"],
    deps = [
        ":phon",
        ":phoneme_inventory",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "transcriptor_test",
    srcs = ["transcriptor_test.py"],
    main = "transcriptor_test.py",
    deps = [
        ":transcriptor",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)
